--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-data-grid": "^7.0.0-beta.19",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "react-tabs": "^5.1.0",
+    "recharts": "^2.1.16",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
